--- a/src/components/sections/form/components/connect/ConnectSection.module.scss
+++ b/src/components/sections/form/components/connect/ConnectSection.module.scss
@@ -17,8 +17,8 @@
   height: 32px;
   fill: main.$text-muted;
   transition: fill 0.2s;
+}
 
-  &:hover {
-    fill: main.$indigo;
-  }
+.icon-button:hover .logo-icon {
+  fill: main.$indigo;
 }
