--- a/src/components/tag/Tag.module.scss
+++ b/src/components/tag/Tag.module.scss
@@ -21,7 +21,7 @@
 }
 
 .tag--core {
-  border-color: rgba(129, 140, 248, 0.4);
+  border-color: main.$indigo-border;
   color: main.$indigo-bright;
   background: main.$indigo-glow;
 }
